[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "basics_MSAKI"
version = "0.0.1"
authors = [ {name="Meek Msaki", email="meek.dev3@gmail.com"} ]
description = "A small package on python basics"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mmsaki/basics"
"Bug Tracker" = "https://github.com/mmsaki/basics/issues"